[package]
name = "planets_on_wgpu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
winit = "0.28"
cfg-if = "1.0"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
cgmath = "0.18"
hexasphere = "8.1"
fastrand = "1.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.15", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "Location"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"